Apache Tez Change Log
=====================

Release 0.8.2: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2679. Admin forms of launch env settings

ALL CHANGES:
  TEZ-2893. Tez UI: Retain vertex info displayed in DAG details page even after completion
  TEZ-2878. Tez UI: AM error handling - Make the UI handle cases in which AM returns unexpected/no data
  TEZ-2922. Tez Live UI gives access denied for admins
  TEZ-2849. Implement Specific Workaround for JDK-8026049 & JDK-8073093.
  TEZ-2828. Fix typo in "Shuffle assigned " log statement in shuffle.orderedgrouped.Shuffle.
  TEZ-2909. Tez UI: Application link in All DAGs table is disable when applicationhistory is unavailable
  TEZ-808. Handle task attempts that are not making progress
  TEZ-2553. Tez UI: Tez UI Nits
  TEZ-2814. ATSImportTool has a return statement in a finally block
  TEZ-2906. Compilation fails with hadoop 2.2.0
  TEZ-2900. Ignore V_INPUT_DATA_INFORMATION when vertex is in Failed/Killed/Error
  TEZ-2244. PipelinedSorter: Progressive allocation for sort-buffers
  TEZ-2904. Pig can't specify task specific command opts
  TEZ-2888. Make critical path calculation resilient to AM crash
  TEZ-2899. Tez UI: DAG getting created with huge horizontal gap in between vertices
  TEZ-2907. NPE in IFile.Reader.getLength during final merge operation
  TEZ-2903. Stop using proprietary APIs in RPCLoadGen.
  TEZ-2882. Consider improving fetch failure handling
  TEZ-2850. Tez MergeManager OOM for small Map Outputs
  TEZ-1888. Fix javac warnings all over codebase.
  TEZ-2886. Ability to merge AM credentials with DAG credentials.
  TEZ-2896. Fix thread names used during Input/Output initialization.
  TEZ-2866. Tez UI: Newly added columns wont be displayed by default in tables
  TEZ-2887. Tez build failure due to missing dependency in pom files.
  TEZ-1692. Reduce code duplication between TezMapredSplitsGrouper and TezMapreduceSplitsGrouper.


Release 0.8.1-alpha: 2015-10-12

INCOMPATIBLE CHANGES

ALL CHANGES: