@@ -33,6 +33,8 @@ App.BasicTableComponent.ColumnDefinition = (function () {
     headerCellName: "Not Available!",
     searchAndSortable: true,
 
+    onSort: null,
+
     width: "",
 
     customStyle: function () {
