@@ -52,7 +52,12 @@ App.BasicTableComponent.HeaderCellView = Ember.View.extend({
 
   actions: {
     sort: function () {
-      this.get('parentView').send('sort', this.get('column.id'));
+      var column = this.get('column'),
+          onSort = column.get('onSort');
+
+      if(!onSort || onSort.call(column, column)) {
+        this.get('parentView').send('sort', this.get('column.id'));
+      }
     },
     startColResize: function () {
       var mouseTracker = {
