@@ -145,6 +145,7 @@ App.DagTasksController = App.TablePageController.extend({
         templateName: 'components/basic-table/status-cell',
         contentPath: 'status',
         observePath: true,
+        onSort: this.onInProgressColumnSort.bind(this),
         getCellContent: function(row) {
           var status = row.get('status');
           return {
@@ -159,6 +160,7 @@ App.DagTasksController = App.TablePageController.extend({
         headerCellName: 'Progress',
         contentPath: 'progress',
         observePath: true,
+        onSort: this.onInProgressColumnSort.bind(this),
         templateName: 'components/basic-table/progress-cell'
       },
       {
@@ -229,7 +231,7 @@ App.DagTasksController = App.TablePageController.extend({
           App.get('Configs.tables.entity.task') || [],
           App.get('Configs.tables.sharedColumns') || []
         )
-      )
+      , this)
     );
   }.property('defaultColumnConfigs'),
 
