@@ -140,6 +140,7 @@ App.VertexTaskAttemptsController = App.TablePageController.extend(App.AutoCounte
         templateName: 'components/basic-table/status-cell',
         contentPath: 'status',
         observePath: true,
+        onSort: this.onInProgressColumnSort.bind(this),
         getCellContent: function(row) {
           var status = App.Helpers.misc.getFixedupDisplayStatus(row.get('status'));
           return {
@@ -153,6 +154,7 @@ App.VertexTaskAttemptsController = App.TablePageController.extend(App.AutoCounte
         headerCellName: 'Progress',
         contentPath: 'progress',
         observePath: true,
+        onSort: this.onInProgressColumnSort.bind(this),
         templateName: 'components/basic-table/progress-cell'
       },
       {
